Fixed Sylexiad font word wrap in single post view

--- a/less/core.less
+++ b/less/core.less
@@ -524,7 +524,7 @@ pre, body#post article, #post .alert, #subpage .alert, body#collection article, 
 	}
 }
 textarea, input#title, pre, body#post article, body#collection article p {
-	&.norm, &.sans, &.wrap {
+	&.norm, &.sans, &.wrap, &.syl {
 		line-height: 1.5;
 		white-space: pre-wrap;       /* CSS 3 */
 		white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
